[gd_scene load_steps=8 format=3 uid="uid://bxcd4bfk2fee7"]

[ext_resource type="Script" uid="uid://m2npcd1yeoyq" path="res://Enemy/Podstawowy/Podstawowy_Enemy.gd" id="1_epr5s"]
[ext_resource type="PackedScene" uid="uid://diikl76jay5oc" path="res://Enemy/Podstawowy/Bullets/Podstawowy_Bullet.tscn" id="2_vso2s"]
[ext_resource type="Texture2D" uid="uid://56w52kur28f2" path="res://Art/Emeny/mareczek iteracjaa.png" id="3_62bfm"]
[ext_resource type="Texture2D" uid="uid://qjmqyi3i02wq" path="res://Art/Emeny/pixil-frame-0 (19).png" id="4_62bfm"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_62bfm"]
radius = 62.0
height = 124.0

[sub_resource type="CircleShape2D" id="CircleShape2D_62bfm"]
radius = 24.0832

[sub_resource type="CircleShape2D" id="CircleShape2D_jkq42"]
radius = 206.243

[node name="Podstawowy_Przeciwnik" type="CharacterBody2D" node_paths=PackedStringArray("shoot_timer", "nav_timer") groups=["Enemy"]]
scale = Vector2(0.5, 0.5)
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_epr5s")
Bullet = ExtResource("2_vso2s")
shoot_timer = NodePath("shoot_timer")
nav_timer = NodePath("nav_timer")

[node name="Area2D" type="Area2D" parent="." groups=["Enemy"]]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_62bfm")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(6, 6)
texture = ExtResource("3_62bfm")

[node name="Marker2D" type="Marker2D" parent="Sprite2D"]
scale = Vector2(1.20755, 1.92453)

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D/Marker2D"]
position = Vector2(9.66144, 1.55882)
scale = Vector2(0.609, 0.398)
texture = ExtResource("4_62bfm")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="nav_timer" type="Timer" parent="."]
wait_time = 0.026
autostart = true

[node name="shoot_timer" type="Timer" parent="."]
wait_time = 0.8

[node name="another_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = -50.0
offset_top = -76.0
offset_right = 52.0
offset_bottom = -49.0
show_percentage = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_62bfm")

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("CircleShape2D_jkq42")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="nav_timer" to="." method="_on_nav_timer_timeout"]
[connection signal="timeout" from="shoot_timer" to="." method="can_shoot"]
[connection signal="timeout" from="another_timer" to="." method="_on_another_timer_timeout"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_area_2d_2_body_exited"]
